--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Angelo's milktea </title>
+    <title>divine coffee shop</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -12,8 +12,8 @@
     <div class="container">
         <div class="row">
             <div class="col-12 text-center">
-                <h2>Angelo's milktea</h2>
-                <p>By: Angelo Layoso Section: BSIT-3B</p>
+                <h2>divine coffee shop</h2></h2>
+                <p>By: Divine Fernandez Section: BSIT-3B</p>
                 <hr class="hr" />
             </div>
         </div>
